crea div carte m2

--- a/menu2.html
+++ b/menu2.html
@@ -28,6 +28,7 @@
       <!--titre couleur-->
 
       <!--entrée-->
+      <div class="carte-m2">
  <section class="entree-m2">
   <div class="englobe-m2">
    <img class="icon-m2" src="images/separateur.svg">
@@ -70,6 +71,7 @@
   <li class="li-m2-3">Millefeuille croustillant</li>
 </ul>
 </section>
+</div>
 </div>
 <!--desserts-->
 
