--- a/menu3.html
+++ b/menu3.html
@@ -28,7 +28,7 @@
 <section class="bloc">
   <div class="entree">
    <div class="btn"></div>
-   <h2 id="title" class="title-m3"><a href="#" id="trait" class="m-3">Pour bien commencer</a></h2>
+   <h2 href="#" id="trait" class="m-3">Pour bien commencer</h2>
    <div class="btn2"></div>
     </div>
 <ul class="ul-m4">
@@ -41,7 +41,7 @@
 <section class="bloc">
   <div class="plat">
 <div class="btn3"></div>
-<h2 id="title" class="title-m3"><a href="#" id="trait" class="m-3">Pour bien continuer</a></h2>
+<h2 href="#" id="trait" class="m-3">Pour bien continuer</h2>
 <div class="btn4"></div>
 </div>
 <ul class="ul-m4">
@@ -53,7 +53,8 @@
 
 <section class="bloc">
   <div class="dessert">
-<div class="btn5"></div><h2 id="title" class="title-m3"><a href="#" id="trait" class="m-3">Pour bien terminer</a></h2>
+<div class="btn5"></div>
+<h2 href="#" id="trait" class="m-3">Pour bien terminer</h2>
 <div class="btn6"></div>
 </div>
 <ul class="ul-m4">
