--- a/menu4.html
+++ b/menu4.html
@@ -25,7 +25,7 @@
 <section>
   <div class="block">
 <img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation">
-<h2 id="title" class="title-m4"><a href="#" id="trait" class="m-4">Esquisse</a></h2>
+<h2 href="#" id="trait" class="m-4">Esquisse</h2>
 <img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation"></div>
 <ul class="ul-m4">
     <li>Fricassée d'escargot au piment d'espelette<span class="prix">60€</span></li>
@@ -39,7 +39,7 @@
 <section>
   <div class="block">
 <img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation">
-<h2 id="title" class="title-m4"><a href="#" id="trait" class="m-4">Oeuvre de maitre</a></h2>
+<h2 href="#" id="trait" class="m-4">Oeuvre de maitre</h2>
 <img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation"></div>
 <ul class="ul-m4">
 <li>Filet de boeuf aux herbes accompagné de sa ribambelle de legumes<span class="prix">70€</span></li>
@@ -52,7 +52,7 @@
 <section>
   <div class="block">
 <img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation">
-<h2 id="title" class="title-m4"><a href="#" id="trait" class="m-4">Au sommet de l'art</a></h2>
+<h2 href="#" id="trait" class="m-4">Au sommet de l'art</h2>
 <img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation"></div>
 <ul class="ul-m4">
 <li>Paris-Brest revisité<span class="prix">55€</span></li>
