modif id = recherche en class=

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--head-->
 
         <!--barre de recherche-->
-            <form id="recherche" method="post" type="text">
+            <form class="recherche" method="post" type="text">
                 <input class="iconloupe" alt="icons"/>              
                 </form>
         <!--barre de recherche-->
