refactorisation code html
rajout alt pour img

--- a/menu2.html
+++ b/menu2.html
@@ -31,9 +31,9 @@
       <div class="carte-m2">
  <section class="entree-m2">
   <div class="englobe-m2">
-   <img class="icon-m2" src="images/separateur.svg">
+   <img class="icon-m2" src="images/separateur.svg" alt="">
    <h2 id="trait" class="m-2">Pour se mettre en appétit</h2>
-   <img class="icon-m2-2" src="images/separateur.svg">
+   <img class="icon-m2-2" src="images/separateur.svg" alt="">
 </div>
 <ul class="ul-m4">
 <li class="li-m2-1">Tartare de poulpe acidulé aux zests d’oranges<span class="prix">79€</span></li>
@@ -46,9 +46,9 @@
  <!--plats-->
  <section class="plat-m2">
   <div class="englobe-m2">
-    <img class="icon-m2" src="images/separateur.svg">
+    <img class="icon-m2" src="images/separateur.svg" alt="">
      <h2 id="trait" class="m-2">Plaisir des papilles</h2>
-     <img class="icon-m2-2" src="images/separateur.svg">
+     <img class="icon-m2-2" src="images/separateur.svg" alt="">
      </div>
 <ul class="ul-m4">
  <li class="li-m2-2">Coquilles Saint Jacques accompagnées d’une purée de panais<span class="prix">95€</span></li>
@@ -61,9 +61,9 @@
 <!--desserts-->
 <section class="dessert-m2">
   <div class="englobe-m2">
-    <img class="icon-m2" src="images/separateur.svg">
+    <img class="icon-m2" src="images/separateur.svg" alt="">
 <h2 id="trait" class="m-2">Gourmandises sucrées</h2>
-<img class="icon-m2-2" src="images/separateur.svg">
+<img class="icon-m2-2" src="images/separateur.svg" alt="">
 </div>
 <ul class="ul-m4">
   <li class="li-m2-3">Pétales de glacés et purée de noisettes</li>
