refactorisation du code html menu 1
supression de class=m1

--- a/menu1.html
+++ b/menu1.html
@@ -20,7 +20,7 @@
     <div class="carte-m1">
     <!--entete-->
   <section class="entete">
-    <img class="note1" src="https://img.icons8.com/dusk/128/000000/musical.png">
+    <img class="note1" src="https://img.icons8.com/dusk/128/000000/musical.png" alt="">
 <h1 class="titre">La note enchantée</h1>
 </section>
 <!--entete-->
@@ -29,7 +29,7 @@
 <section>
   <div class="essaie">
     <img class="separateur-m1" src="images/separateur.png" alt="">
-    <h2 id="trait" class="m-1">Prélude</h2>
+    <h2 id="trait">Prélude</h2>
     <img class="separateur-m1" src="images/separateur.png" alt="">
   </div>
  <ul class="ul-m4">
@@ -44,7 +44,7 @@
   <section>
     <div class="essaie">
       <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 id="trait" class="m-1">Point d'orgue</h2>
+      <h2 id="trait">Point d'orgue</h2>
       <img class="separateur-m1" src="images/separateur.png" alt=""></div>
  <ul class="ul-m4">
  <li>Noix de coquilles Saint-jacques sur lit de pure de céleri-rave <span class="prix">102€</span></li>
@@ -57,8 +57,9 @@
   <section>
     <div class="essaie">
       <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 id="trait" class="m-1">Mouvement final</h2>
-      <img class="separateur-m1" src="images/separateur.png" alt=""></div>
+      <h2 id="trait">Mouvement final</h2>
+      <img class="separateur-m1" src="images/separateur.png" alt="">
+    </div>
 <ul class="ul-m4">
  <li>Macaron noisette et chocolat, glace au caramel brun et sel de Guérende</li>
  <li>Baba au rhum revisité avec son coulis de citron</li>
@@ -68,7 +69,7 @@
 <!--desserts-->
 <!--bas-->
 <section class="bas-m1">
-  <img class="note2" src="https://img.icons8.com/dusk/64/000000/musical.png">
+  <img class="note2" src="https://img.icons8.com/dusk/64/000000/musical.png" alt="">
   <h3 class="fin">La note enchantée</h3>
 </section>
 <!--bas-->
