refac code html m1

--- a/menu1.html
+++ b/menu1.html
@@ -29,7 +29,7 @@
 <section>
   <div class="essaie">
     <img class="separateur-m1" src="images/separateur.png" alt="">
-    <h2 id="trait">Prélude</h2>
+    <h2 class="m-1">Prélude</h2>
     <img class="separateur-m1" src="images/separateur.png" alt="">
   </div>
  <ul class="ul-m4">
@@ -44,7 +44,7 @@
   <section>
     <div class="essaie">
       <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 id="trait">Point d'orgue</h2>
+      <h2 class="m-1">Point d'orgue</h2>
       <img class="separateur-m1" src="images/separateur.png" alt=""></div>
  <ul class="ul-m4">
  <li>Noix de coquilles Saint-jacques sur lit de pure de céleri-rave <span class="prix">102€</span></li>
@@ -57,7 +57,7 @@
   <section>
     <div class="essaie">
       <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 id="trait">Mouvement final</h2>
+      <h2 class="m-1">Mouvement final</h2>
       <img class="separateur-m1" src="images/separateur.png" alt="">
     </div>
 <ul class="ul-m4">
