refactorisation des code html
refactorisation des code html pour validation w3c

--- a/menu2.html
+++ b/menu2.html
@@ -32,7 +32,7 @@
  <section class="entree-m2">
   <div class="englobe-m2">
    <img class="icon-m2" src="images/separateur.svg" alt="">
-   <h2 id="trait" class="m-2">Pour se mettre en appétit</h2>
+   <h2 class="m-2">Pour se mettre en appétit</h2>
    <img class="icon-m2-2" src="images/separateur.svg" alt="">
 </div>
 <ul class="ul-m4">
@@ -47,7 +47,7 @@
  <section class="plat-m2">
   <div class="englobe-m2">
     <img class="icon-m2" src="images/separateur.svg" alt="">
-     <h2 id="trait" class="m-2">Plaisir des papilles</h2>
+     <h2 class="m-2">Plaisir des papilles</h2>
      <img class="icon-m2-2" src="images/separateur.svg" alt="">
      </div>
 <ul class="ul-m4">
@@ -62,7 +62,7 @@
 <section class="dessert-m2">
   <div class="englobe-m2">
     <img class="icon-m2" src="images/separateur.svg" alt="">
-<h2 id="trait" class="m-2">Gourmandises sucrées</h2>
+<h2 class="m-2">Gourmandises sucrées</h2>
 <img class="icon-m2-2" src="images/separateur.svg" alt="">
 </div>
 <ul class="ul-m4">
