--- a/menu3.html
+++ b/menu3.html
@@ -22,7 +22,7 @@
   <!--container-->
     <div id="container-m3">
     <section class="light-m3">
-<h1 class="gradient-m3">Le délice des papilles</h1>
+<h2 class="gradient-m3">Le délice des papilles</h2>
     </section>
    
 <section class="bloc">
@@ -46,7 +46,7 @@
 </div>
 <ul class="ul-m4">
 <li>Poulet rôti aux herbes de provence et sa crème aux truffe<span class="prix">110€</span></li>
-<li>Langouste rôtie et ses légumes de saison<span class="prix">225€</li>
+<li>Langouste rôtie et ses légumes de saison<span class="prix">225€</span></li>
 <li>Côte de bœuf angus et sa purée de pané<span class="prix">115€</span></li>
 </ul>
 </section>
