refac code html index
pour validation w3c

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <!--head-->
 
         <!--barre de recherche-->
-            <form class="recherche" method="post" type="text">
-                <input class="iconloupe" alt="icons"/>              
+            <div class="recherche">
+                <form method="post" type="text"><input class="iconloupe" alt="icons"/>              
                 </form>
+            </div>
         <!--barre de recherche-->
 
         <!--box-->
