refac code html index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!--barre de recherche-->
             <div class="recherche">
-                <form method="post" type="text"><input class="iconloupe" alt="icons"/>              
+                <form method="post" action="menu"><input type="text" class="iconloupe" alt="icons"/>              
                 </form>
             </div>
         <!--barre de recherche-->
