--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <!--head-->
 
         <!--barre de recherche-->
-            <div class="recherche">
-                <form method="post" action="menu"><input type="text" class="iconloupe"/>              
-                </form>
+        <div class="recherche">
+            <form action="" method="get">
+              <input type="text" name="" class="iconloupe">
             </div>
         <!--barre de recherche-->
 
