val w3c suite aux changement

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!--barre de recherche-->
         <div class="recherche">
-            <form action="" method="get">
+            <form action="post" method="get">
               <input type="text" name="" class="iconloupe">
             </div>
         <!--barre de recherche-->
