--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <!--barre de recherche-->
         <div class="recherche">
             <form action="post" method="get">
-              <input type="text" name="" class="iconloupe">
+              <input class="iconloupe"/>
+              </form>
             </div>
         <!--barre de recherche-->
 
