retouche de toutes les polices

--- a/menu1.html
+++ b/menu1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">  
   <link rel="stylesheet" href="./styles/partials/style.css">
   <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
   <title>La note enchantée</title>
@@ -21,7 +21,7 @@
     <!--entete-->
   <section class="entete">
     <img class="note1" src="https://img.icons8.com/dusk/128/000000/musical.png" alt="">
-<h2 class="titre">La note enchantée</h2>
+<h2 class="titrem1">La note enchantée</h2>
 </section>
 <!--entete-->
 
