--- a/menu2.html
+++ b/menu2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Parisienne&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/partials/style.css">
   <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
   
@@ -18,12 +18,12 @@
     <!--header html-->
 
     <!--titre-->
-    <h1 class="titre">Le chic à la française</h1>
+    <h2 class="titre">Le chic à la française</h2>
      <div id="container-m2">
     <!--titre-->
     <!--titre couleur-->
       <section class="light-m2">
-        <h2 class="gradient-m2">Le chic à la francaise</h2>
+        <h1 class="gradient-m2">Le chic à la francaise</h1>
       </section>
       <!--titre couleur-->
 
@@ -35,7 +35,7 @@
    <h2 class="m-2">Pour se mettre en appétit</h2>
    <img class="icon-m2-2" src="images/separateur.svg" alt="">
 </div>
-<ul class="ul-m4">
+<ul class="ul-m2">
 <li class="li-m2-1">Tartare de poulpe acidulé aux zests d’oranges<span class="prix">79€</span></li>
 <li class="li-m2-1">Velouté de légumes d’antan<span class="prix">57€</span></li>
 <li class="li-m2-1">Soupe à l’oignon revisitée<span class="prix">57€</span></li>
@@ -50,7 +50,7 @@
      <h2 class="m-3">Plaisir des papilles</h2>
      <img class="icon-m2-2" src="images/separateur.svg" alt="">
      </div>
-<ul class="ul-m4">
+<ul class="ul-m2">
  <li class="li-m2-2">Coquilles Saint Jacques accompagnées d’une purée de panais<span class="prix">95€</span></li>
  <li class="li-m2-2">Magret de canard et parmentier de pommes de terres<span class="prix">88€</span></li>
  <li class="li-m2-2">Pigeonneau d’île et vilaine sur son lit de gnocchis aux legumes<span class="prix">175€</span></li>
@@ -65,7 +65,7 @@
 <h2 class="m-4">Gourmandises sucrées</h2>
 <img class="icon-m2-2" src="images/separateur.svg" alt="">
 </div>
-<ul class="ul-m4">
+<ul class="ul-m2">
   <li class="li-m2-3">Pétales de glacés et purée de noisettes</li>
   <li class="li-m2-3">Fondant au chocolat revisité</li>
   <li class="li-m2-3">Millefeuille croustillant</li>
