--- a/menu3.html
+++ b/menu3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kalam:400,700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="./styles/partials/style.css">
   <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
   <title>Le délice des papilles</title>
@@ -16,7 +16,7 @@
     </header>
   <!--header html-->
   <!--titre-->
-  <h1 class="titre">Le délice des papilles</h1>
+  <h2 class="titre">Le délice des papilles</h2>
   <!--titre-->
 
   <!--container-->
