--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>ohmyfood</title>
 </head>
 
-<body class="page1">
+<body>
     <div id="container1">
 
         <!--head-->
@@ -42,6 +42,7 @@
             <div class="typewriter">
                 <p class="bientot">prochainement<span style="margin-top:-5px">.</span><span>.</span><span>.</span></p>
             </div>
+        
         <!--prochainement-->
 
         <!--footer-->
