commencement des modifs oubliés

--- a/mentionlegal.html
+++ b/mentionlegal.html
@@ -1,30 +1,59 @@
 
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">  
+  <link rel="stylesheet" href="./styles/partials/style.css">
+  <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
+  <title>MENTIONS LEGALES</title>
+</head>
+<body id="bloc-page">
+       <!--header html-->
+       <header class="header">
+        <h1>ohmyfood</h1>
+    </header>
+        <!--header html-->
+        <div id="container-mentions">
+<h2>MENTIONS LEGALES:</h2>
 
-<h1>MENTIONS LEGALES :</h1>
+<p>Conformément aux dispositions des articles 6-III et 19 de la Loi n° 2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique, dite L.C.E.N., nous portons à la connaissance des utilisateurs et visiteurs du site : 
+    <a href="http://Www.autroncvert.fr" target="_blank">Www.autroncvert.fr</a> les informations suivantes :
+</p>
 
-<p style="text-align:justify"><strong> </strong><br />
-Conformément aux dispositions des articles 6-III et 19 de la Loi n° 2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique, dite L.C.E.N., nous portons à la connaissance des utilisateurs et visiteurs du site : <a href="http://Www.autroncvert.fr" target="_blank">Www.autroncvert.fr</a> les informations suivantes :</p>
+<p><strong>ÉDITEUR</strong></p>
 
-<p style="text-align:justify"><strong>ÉDITEUR</strong></p>
+<p>Le site <a href="http://Www.autroncvert.fr" target="_blank">Www.autroncvert.fr</a> est la propriété exclusive de 
+    <strong>Entreprise individuel Au tronc vert</strong>, qui l'édite.
+</p>
 
-<p style="text-align:justify">Le site <a href="http://Www.autroncvert.fr" style="color: rgb(7, 130, 193); font-family: sans-serif, Arial, Verdana, " target="_blank">Www.autroncvert.fr</a> est la propriété exclusive de <strong>Entreprise individuel </strong><strong>Au tronc vert</strong>, qui l'édite.</p>
+<p><strong>Au tronc vert<br/>
+<strong>Entreprise individuel au capital de 20000 </strong>€Tél  : <strong>0663060196</strong>
+</p>
 
-<p style="text-align:justify"><strong>Au tronc vert</strong><strong> </strong><br />
-<strong>Entreprise individuel </strong>au capital de<strong> </strong><strong>20000 </strong>€Tél  : <strong>0663060196</strong></p>
+<p><strong>21 rue principale 60790 Pouilly</strong><br/>
+Immatriculée au Registre du Commerce et des Sociétés de  <strong>0000000 </strong>sous le numéro<strong> 83495918100019</strong>
+</p>
 
-<p style="text-align:justify"><strong>21 rue principale  </strong><strong>60790 Pouilly</strong><br />
-Immatriculée au Registre du Commerce et des Sociétés de  <strong>0000000 </strong>sous le numéro<strong> </strong><strong>83495918100019</strong><strong> </strong></p>
-
-<p style="text-align:justify">Numéro TVA intracommunautaire : <strong>000000</strong><br />
+<p>Numéro TVA intracommunautaire : <strong>000000</strong><br />
 Adresse de courrier électronique : <strong>Autronvert@gmail.com</strong> <br />
  <br />
 Directeur de la  publication : <strong>Quentin beillard</strong><br />
 Contactez le responsable de la publication : <strong>Beillard.quentin72@gmail.com</strong></p>
 
-<p style="text-align:justify"> </p>
+<p><strong>HÉBERGEMENT</strong></p>
 
-<p style="text-align:justify"><strong>HÉBERGEMENT</strong></p>
-
-<p style="text-align:justify">Le site est hébergé par <strong>1&1 Ppppp 0000 Ppppp</strong><br />
-<u><strong>CREDITS :</strong></u> les mentions légales ont étés générées par <strong><a href="https://www.generer-mentions-legales.com">mentions légales</a></strong><br />
-Horaires de la <strong><a href="http://www.patinoire.biz/p+patinoire-de-lyon---charlemagne+113.html">Patinoire Lyon</a></strong></p>
+<p>Le site est hébergé par <strong>1&1 Ppppp 0000 Ppppp</strong><br />
+<u><strong>CREDITS :</strong></u> les mentions légales ont étés générées par <strong>
+    <a href="https://www.generer-mentions-legales.com">mentions légales</a></strong><br />
+Horaires de la <strong><a href="http://www.patinoire.biz/p+patinoire-de-lyon---charlemagne+113.html">Patinoire Lyon</a></strong>
+</p>
+</div>
+<!--footer html-->
+<footer id="bas">
+    <p><a class="mention" href="mentionlegal.html" target="blank">Mentions légales</a></p>
+        <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
+  </footer>
+  <!--footer html-->
