--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
         <!--box-->
         <div id="box1">
-            <div class="menu"><a href="menu1.html" target="blank"><img  src="images/menu-1b.png" alt="la note enchantée"></a></div>
-            <div class="menu"><a href="menu2.html" target="blank"><img src="images/menu-2b.png" alt="le chic à la francaise"></a></div>
-            <div class="menu"><a href="menu3.html" target="blank"><img src="images/menu-3b.png" alt="le délice des papilles"></a></div>
-            <div class="menu"><a href="menu4.html" target="blank"><img src="images/menu-4b.png" alt="la palette du goût"></a></div>
+            <div class="menu"><a href="menu1.html"><img  src="images/menu-1b.png" alt="la note enchantée"></a></div>
+            <div class="menu"><a href="menu2.html"><img src="images/menu-2b.png" alt="le chic à la francaise"></a></div>
+            <div class="menu"><a href="menu3.html"><img src="images/menu-3b.png" alt="le délice des papilles"></a></div>
+            <div class="menu"><a href="menu4.html"><img src="images/menu-4b.png" alt="la palette du goût"></a></div>
         </div>
         <!--box-->
 
