--- a/menu3.html
+++ b/menu3.html
@@ -12,7 +12,7 @@
 <body id="bloc-page" class="bloc-page-m3">
     <!--header html-->
     <header class="header">
-      <h1>ohmyfood</h1>
+      <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
     </header>
   <!--header html-->
   <!--titre-->
