--- a/menu4.html
+++ b/menu4.html
@@ -12,7 +12,7 @@
 <body id="bloc-page" class="bloc-page-m4">
      <!--header html-->
         <header class="header">
-          <h1>ohmyfood</h1>
+          <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
       </header>
     <!--header html-->
     <h2 class="titre">La palette du goût</h2>
