--- a/menu1.html
+++ b/menu1.html
@@ -13,7 +13,7 @@
   <div id="container-m1">
        <!--header html-->
        <header class="header">
-        <h1>ohmyfood</h1>
+        <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
     </header>
     <!--header html-->
     <h2 class="titre">La note enchantée</h2>
