--- a/mentionlegal.html
+++ b/mentionlegal.html
@@ -13,7 +13,7 @@
 <body id="bloc-page">
        <!--header html-->
        <header class="header">
-        <h1>ohmyfood</h1>
+        <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
     </header>
         <!--header html-->
         <div id="container-mentions">
