--- a/menu1.html
+++ b/menu1.html
@@ -77,7 +77,7 @@
 </div>
 <!--footer-->
 <footer id="bas">
-  <p><a class="mention" href="mentionlegal.html" target="blank">Mentions légales</a></p>
+  <p><a class="mention" href="mentionlegal.html" target="_blank">Mentions légales</a></p>
       <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
 </footer>
 </body>
