--- a/menu3.html
+++ b/menu3.html
@@ -68,7 +68,7 @@
 
     <!--footer html-->
     <footer id="bas">
-      <p><a class="mention" href="mentionlegal.html" target="blank">Mentions légales</a></p>
+      <p><a class="mention" href="mentionlegal.html" target="_blank">Mentions légales</a></p>
           <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
   </footer>
     <!--footer html-->
