--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <!--footer-->
         <footer id="bas">
-            <p><a class="mention" href="mentionlegal.html" target="blank">Mentions légales</a></p>
+            <p><a class="mention" href="mentionlegal.html" target="_blank">Mentions légales</a></p>
                 <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
         </footer>
         <!--footer-->
