--- a/menu4.html
+++ b/menu4.html
@@ -15,13 +15,16 @@
           <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
       </header>
     <!--header html-->
+
     <h2 class="titre">La palette du goût</h2>
+
     <!--container-->
     <div id="container-m4">
      <section class="light-m4">
       <h2 class="gradient-m4">La palette du goût</h2>
      </section>
-     <!--entree-->
+    <!--container-->
+    <!--entree-->
 <section>
   <div class="block">
 <img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation">
@@ -33,9 +36,9 @@
 <li>Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="prix">65€</span></li>
 </ul>
 </section>
-<!--entree-->
+    <!--entree-->
 
-<!--plats-->
+    <!--plats-->
 <section>
   <div class="block">
 <img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation">
@@ -48,6 +51,7 @@
 </ul>
 </section>
 <!--plats-->
+
 <!--desserts-->
 <section>
   <div class="block">
@@ -60,13 +64,15 @@
 <li>Mousse au chocolat au piment d'espelette rt à la truffe noire<span class="prix">60€</span></li>
 </ul>
 </section>
-<!--desserts-->
 </div>
+<!--desserts-->
+
 <!--footer html-->
 <footer id="bas">
   <p><a class="mention" href="mentionlegal.html" target="_blank">Mentions légales</a></p>
       <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
 </footer>
 <!--footer html-->
+
 </body>
 </html>
