redimensionnage de tout les menus

--- a/menu1.html
+++ b/menu1.html
@@ -9,7 +9,7 @@
   <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
   <title>La note enchantée</title>
 </head>
-<body id="bloc-page" class="bloc-page-m1">
+<body>
   <div id="container-m1">
        <!--header html-->
        <header class="header">
