--- a/menu4.html
+++ b/menu4.html
@@ -9,7 +9,8 @@
   <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
   <title>La palette du goût</title>
 </head>
-<body id="bloc-page" class="bloc-page-m4">
+<body>
+  <div id="container-m4">
      <!--header html-->
         <header class="header">
           <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
@@ -19,7 +20,7 @@
     <h2 class="titre">La palette du goût</h2>
 
     <!--container-->
-    <div id="container-m4">
+    <div id="carte-m4">
      <section class="light-m4">
       <h2 class="gradient-m4">La palette du goût</h2>
      </section>
@@ -73,6 +74,6 @@
       <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
 </footer>
 <!--footer html-->
-
+</div>
 </body>
 </html>
