--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
     <meta name="description" content="OHMYFOOD">
-   <link rel="stylesheet" href="./styles/partials/maquette.css">
+   <link rel="stylesheet" href="./styles/partials/style.css">
     <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
     <title>ohmyfood</title>
 </head>
 
 <body>
     <div id="container1">
-
         <!--head-->
-        <header class="header1">
+        <header class="header">
             <h1>ohmyfood</h1>
         </header>
         <!--head-->
