--- a/menu2.html
+++ b/menu2.html
@@ -10,7 +10,8 @@
   
   <title>Le chic à la française</title>
 </head>
-<body id="bloc-page" class="bloc-page-m2">
+<body>
+  <div id="container-m-2">
       <!--header html-->
   <header class="header">
     <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
@@ -19,7 +20,7 @@
 
     <!--titre-->
     <h2 class="titre">Le chic à la française</h2>
-     <div id="container-m2">
+     <div id="carte-m2">
     <!--titre-->
     <!--titre couleur-->
       <section class="light-m2">
@@ -81,5 +82,6 @@
       <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
 </footer>
 <!--footer html-->
+</div>
 </body>
 </html>
