--- a/menu3.html
+++ b/menu3.html
@@ -9,7 +9,8 @@
   <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
   <title>Le délice des papilles</title>
 </head>
-<body id="bloc-page" class="bloc-page-m3">
+<body>
+ <div id="container-m-3">
     <!--header html-->
     <header class="header">
       <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
@@ -20,7 +21,7 @@
   <!--titre-->
 
   <!--container-->
-    <div id="container-m3">
+    <div id="carte-m3">
     <section class="light-m3">
 <h2 class="gradient-m3">Le délice des papilles</h2>
     </section>
@@ -72,5 +73,6 @@
           <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
   </footer>
     <!--footer html-->
+    </div>
 </body>
 </html>
