suite modif pou coller a la maquette
suite modif pour respect des exigences

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="container1">
         <!--head-->
         <header class="header">
-            <h1>ohmyfood</h1>
+            <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
         </header>
         <!--head-->
 
