--- a/menu2.html
+++ b/menu2.html
@@ -23,7 +23,7 @@
      <div id="carte-m2">
     <!--titre-->
     <!--titre couleur-->
-      <section class="light-m2">
+      <section>
         <h2 class="gradient-m2">Le chic à la francaise</h2>
       </section>
       <!--titre couleur-->
