--- a/menu4.html
+++ b/menu4.html
@@ -21,30 +21,35 @@
 
     <!--container-->
     <div id="carte-m4">
-     <section class="light-m4">
+     <section>
       <h2 class="gradient-m4">La palette du goût</h2>
      </section>
     <!--container-->
     <!--entree-->
-<section>
-  <div class="block">
-<img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation">
+    <section>
+<div class="englobe-m4">
+  <div class="entree-m4">
+  <div class="btnm4"></div>
 <h2 class="m-1">Esquisse</h2>
-<img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation"></div>
+<div class="btnm4-2"></div>
+</div>
 <ul class="ul-m4">
     <li>Fricassée d'escargot au piment d'espelette<span class="prix">60€</span></li>
 <li>Oeuf au plat assaisine à la truffe sur lit de caviar<span class="prix">55€</span></li>
 <li>Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="prix">65€</span></li>
 </ul>
+</div>
 </section>
     <!--entree-->
 
     <!--plats-->
 <section>
-  <div class="block">
-<img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation">
+  <div class="englobe-m4">
+    <div class="entree-m4">
+    <div class="btnm4"></div>
 <h2 class="m-1">Oeuvre de maitre</h2>
-<img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation"></div>
+<div class="btnm4-2"></div>
+</div>
 <ul class="ul-m4">
 <li>Filet de boeuf aux herbes accompagné de sa ribambelle de legumes<span class="prix">70€</span></li>
 <li>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span class="prix">85€</span></li>
@@ -55,10 +60,12 @@
 
 <!--desserts-->
 <section>
-  <div class="block">
-<img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation">
+  <div class="englobe-m4">
+    <div class="entree-m4">
+    <div class="btnm4"></div>
 <h2 class="m-1">Au sommet de l'art</h2>
-<img class="separateur" src="images/iconm4.svg" alt="https://pngtree.com/so/ligne-de-séparation"></div>
+<div class="btnm4-2"></div>
+</div>
 <ul class="ul-m4">
 <li>Paris-Brest revisité<span class="prix">55€</span></li>
 <li>Macaron de chocolat d'exception et glace à la vanille de Madagascar<span class="prix">65€</span></li>
