refac code et taiile

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <!--prochainement-->
             <div class="typewriter">
-                <p class="bientot">prochainement<span style="margin-top:-5px">.</span><span>.</span><span>.</span></p>
+                <p class="bientot">prochainement<span>.</span><span>.</span><span>.</span></p>
             </div>
         
         <!--prochainement-->
