--- a/mentionlegal.html
+++ b/mentionlegal.html
@@ -10,7 +10,8 @@
   <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
   <title>MENTIONS LEGALES</title>
 </head>
-<body id="bloc-page">
+<body>
+    <div id="bloc-page-mention">
        <!--header html-->
        <header class="header">
         <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
@@ -50,10 +51,13 @@ Contactez le responsable de la publication : <strong>Beillard.quentin72@gmail.co
     <a href="https://www.generer-mentions-legales.com">mentions légales</a></strong><br />
 Horaires de la <strong><a href="http://www.patinoire.biz/p+patinoire-de-lyon---charlemagne+113.html">Patinoire Lyon</a></strong>
 </p>
+<p class="important">les mentions legales ci-dessus ne sont pas valable, ceci est un projet d'école!!!</p>
 </div>
 <!--footer html-->
 <footer id="bas">
     <p><a class="mention" href="mentionlegal.html" target="blank">Mentions légales</a></p>
         <p><a class="mail" href="mailto:ohmyfoodteam@yyy.com">Contactez nous</a></p>
   </footer>
+  </div>
+  </body>
   <!--footer html-->
