refactorisation des codes css

--- a/menu3.html
+++ b/menu3.html
@@ -22,7 +22,7 @@
 
   <!--container-->
     <div id="carte-m3">
-    <section class="light-m3">
+    <section>
 <h2 class="gradient-m3">Le délice des papilles</h2>
     </section>
    
