--- a/menu1.html
+++ b/menu1.html
@@ -15,10 +15,12 @@
        <header class="header">
         <h1><a href="index.html" class="T-header">ohmyfood</a></h1>
     </header>
+
     <!--header html-->
     <h2 class="titre">La note enchantée</h2>
     <div class="carte-m1">
     <!--entete-->
+
   <section class="entete">
     <img class="note1" src="https://img.icons8.com/dusk/128/000000/musical.png" alt="">
      <h2 class="titrem1">La note enchantée</h2>
@@ -29,7 +31,7 @@
 <section>
   <div class="essaie">
     <img class="separateur-m1" src="images/separateur.png" alt="">
-    <h2 class="m-1">Prélude</h2>
+    <h2 id="traitm1" class="m-1">Prélude</h2>
     <img class="separateur-m1" src="images/separateur.png" alt="">
   </div>
  <ul class="ul-m4">
@@ -44,7 +46,7 @@
   <section>
     <div class="essaie">
       <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 class="m-1">Point d'orgue</h2>
+      <h2 id="traitm1" class="m-1">Point d'orgue</h2>
       <img class="separateur-m1" src="images/separateur.png" alt=""></div>
  <ul class="ul-m4">
  <li>Noix de coquilles Saint-jacques sur lit de pure de céleri-rave <span class="prix">102€</span></li>
@@ -57,7 +59,7 @@
   <section>
     <div class="essaie">
       <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 class="m-1">Mouvement final</h2>
+      <h2 id="traitm1" class="m-1">Mouvement final</h2>
       <img class="separateur-m1" src="images/separateur.png" alt="">
     </div>
 <ul class="ul-m4">
