--- a/menu3.html
+++ b/menu3.html
@@ -29,7 +29,7 @@
 <section class="bloc">
   <div class="entree">
    <div class="btn"></div>
-   <h2 class="m-1">Pour bien commencer</h2>
+   <h2 id="traitm3" class="m-1">Pour bien commencer</h2>
    <div class="btn2"></div>
     </div>
 <ul class="ul-m4">
@@ -42,7 +42,7 @@
 <section class="bloc">
   <div class="plat">
 <div class="btn3"></div>
-<h2 class="m-1">Pour bien continuer</h2>
+<h2 id="traitm3" class="m-1">Pour bien continuer</h2>
 <div class="btn4"></div>
 </div>
 <ul class="ul-m4">
@@ -55,7 +55,7 @@
 <section class="bloc">
   <div class="dessert">
 <div class="btn5"></div>
-<h2 class="m-1">Pour bien terminer</h2>
+<h2 id="traitm3" class="m-1">Pour bien terminer</h2>
 <div class="btn6"></div>
 </div>
 <ul class="ul-m4">
