--- a/menu4.html
+++ b/menu4.html
@@ -28,7 +28,7 @@
 <div class="englobe-m4">
   <div class="entree-m4">
   <div class="btnm4"></div>
-<h2 class="m-1">Esquisse</h2>
+<h2 id="traitm4" class="m-1">Esquisse</h2>
 <div class="btnm4-2"></div>
 </div>
 <ul class="ul-m4">
@@ -45,7 +45,7 @@
   <div class="englobe-m4">
     <div class="entree-m4">
     <div class="btnm4"></div>
-<h2 class="m-1">Oeuvre de maitre</h2>
+<h2 id="traitm4" class="m-1">Oeuvre de maitre</h2>
 <div class="btnm4-2"></div>
 </div>
 <ul class="ul-m4">
@@ -61,7 +61,7 @@
   <div class="englobe-m4">
     <div class="entree-m4">
     <div class="btnm4"></div>
-<h2 class="m-1">Au sommet de l'art</h2>
+<h2 id="traitm4" class="m-1">Au sommet de l'art</h2>
 <div class="btnm4-2"></div>
 </div>
 <ul class="ul-m4">
