refactorisation du code pour validation w3c

--- a/mentionlegal.html
+++ b/mentionlegal.html
@@ -30,8 +30,8 @@
     <strong>Entreprise individuel Au tronc vert</strong>, qui l'édite.
 </p>
 
-<p><strong>Au tronc vert<br/>
-<strong>Entreprise individuel au capital de 20000 </strong>€Tél  : <strong>0663060196</strong>
+<p>Au tronc vert<br/>
+<strong>Entreprise individuel au capital de 20000 </strong>Tél  : <strong>0663060196</strong>
 </p>
 
 <p><strong>21 rue principale 60790 Pouilly</strong><br/>
@@ -47,7 +47,7 @@ Contactez le responsable de la publication : <strong>Beillard.quentin72@gmail.co
 <p><strong>HÉBERGEMENT</strong></p>
 
 <p>Le site est hébergé par <strong>1&1 Ppppp 0000 Ppppp</strong><br />
-<u><strong>CREDITS :</strong></u> les mentions légales ont étés générées par <strong>
+<strong>CREDITS :</strong>les mentions légales ont étés générées par <strong>
     <a href="https://www.generer-mentions-legales.com">mentions légales</a></strong><br />
 Horaires de la <strong><a href="http://www.patinoire.biz/p+patinoire-de-lyon---charlemagne+113.html">Patinoire Lyon</a></strong>
 </p>
