--- a/menu1.html
+++ b/menu1.html
@@ -31,7 +31,7 @@
 <section>
   <div class="essaie">
     <img class="separateur-m1" src="images/separateur.png" alt="">
-    <h2 id="traitm1" class="m-1">Prélude</h2>
+    <h2 class="m-1"><span class="traitm1">Prélude</span></h2>
     <img class="separateur-m1" src="images/separateur.png" alt="">
   </div>
  <ul class="ul-m4">
@@ -46,7 +46,7 @@
   <section>
     <div class="essaie">
       <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 id="traitm1" class="m-1">Point d'orgue</h2>
+      <h2 class="m-1"><span class="traitm1">Point d'orgue</span></h2>
       <img class="separateur-m1" src="images/separateur.png" alt=""></div>
  <ul class="ul-m4">
  <li>Noix de coquilles Saint-jacques sur lit de pure de céleri-rave <span class="prix">102€</span></li>
@@ -59,7 +59,7 @@
   <section>
     <div class="essaie">
       <img class="separateur-m1" src="images/separateur.png" alt="">
-      <h2 id="traitm1" class="m-1">Mouvement final</h2>
+      <h2 class="m-1"><span class="traitm1">Mouvement final</span></h2>
       <img class="separateur-m1" src="images/separateur.png" alt="">
     </div>
 <ul class="ul-m4">
