--- a/menu4.html
+++ b/menu4.html
@@ -24,11 +24,9 @@
       <h2 class="gradient-m4">La palette du goût</h2>
     
     <!--entree-->
-    <section>
-<div class="englobe-m4">
   <div class="entree-m4">
   <div class="btnm4"></div>
-<h2 id="traitm4" class="m-1">Esquisse</h2>
+<h2 class="m-1"><span class="traitm4">Esquisse</span></h2>
 <div class="btnm4-2"></div>
 </div>
 <ul class="ul-m4">
@@ -36,16 +34,13 @@
 <li>Oeuf au plat assaisine à la truffe sur lit de caviar<span class="prix">55€</span></li>
 <li>Foie gras de canard mi-cuit et ses copeaux de truffe noire<span class="prix">65€</span></li>
 </ul>
-</div>
-</section>
     <!--entree-->
 
     <!--plats-->
-<section>
-  <div class="englobe-m4">
+
     <div class="entree-m4">
     <div class="btnm4"></div>
-<h2 id="traitm4" class="m-1">Oeuvre de maitre</h2>
+<h2 class="m-1"><span class="traitm4">Oeuvre de maitre</span></h2>
 <div class="btnm4-2"></div>
 </div>
 <ul class="ul-m4">
@@ -53,15 +48,12 @@
 <li>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais<span class="prix">85€</span></li>
 <li>Filet de turbot aux agrumes<span class="prix">125€</span></li>
 </ul>
-</section>
 <!--plats-->
 
 <!--desserts-->
-<section>
-  <div class="englobe-m4">
     <div class="entree-m4">
     <div class="btnm4"></div>
-<h2 id="traitm4" class="m-1">Au sommet de l'art</h2>
+<h2 class="m-1"><span class="traitm4">Au sommet de l'art</span></h2>
 <div class="btnm4-2"></div>
 </div>
 <ul class="ul-m4">
@@ -69,7 +61,6 @@
 <li>Macaron de chocolat d'exception et glace à la vanille de Madagascar<span class="prix">65€</span></li>
 <li>Mousse au chocolat au piment d'espelette rt à la truffe noire<span class="prix">60€</span></li>
 </ul>
-</section>
 </div>
 <!--desserts-->
 
