--- a/menu4.html
+++ b/menu4.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Rokkitt:100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Serif:700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="./styles/partials/style.css">
   <script src="https://kit.fontawesome.com/a2a69c8064.js" crossorigin="anonymous"></script>
   <title>La palette du goût</title>
