--- a/menu2.html
+++ b/menu2.html
@@ -31,9 +31,9 @@
       <!--entrée-->
  <section class="entree-m2">
   <div class="englobe-m2">
-   <img class="icon-m2" src="images/separateur.svg" alt="">
+   <img class="icon-m2" src="images/sepm2-orange.png" alt="">
    <h2 class="m-2"><span class="trait">Pour se mettre en appétit</span></h2>
-   <img class="icon-m2-2" src="images/separateur.svg" alt="">
+   <img class="icon-m2-2" src="images/sepm2-orange.png" alt="">
 </div>
 <ul class="ul-m2">
 <li class="li-m2-1">Tartare de poulpe acidulé aux zests d’oranges<span class="prix">79€</span></li>
@@ -46,9 +46,9 @@
  <!--plats-->
  <section class="plat-m2">
   <div class="englobe-m2">
-    <img class="icon-m2" src="images/separateur.svg" alt="">
+    <img class="icon-m2" src="images/sepm2-violet.png" alt="">
      <h2 class="m-3"><span class="trait">Plaisir des papilles</span></h2>
-     <img class="icon-m2-2" src="images/separateur.svg" alt="">
+     <img class="icon-m2-2" src="images/sepm2-violet.png" alt="">
      </div>
 <ul class="ul-m2">
  <li class="li-m2-2">Coquilles Saint Jacques accompagnées d’une purée de panais<span class="prix">95€</span></li>
@@ -61,9 +61,9 @@
 <!--desserts-->
 <section class="dessert-m2">
   <div class="englobe-m2">
-    <img class="icon-m2" src="images/separateur.svg" alt="">
+    <img class="icon-m2" src="images/sepm2-bleu.png" alt="">
 <h2 class="m-4"><span class="trait">Gourmandises sucrées</span></h2>
-<img class="icon-m2-2" src="images/separateur.svg" alt="">
+<img class="icon-m2-2" src="images/sepm2-bleu.png" alt="">
 </div>
 <ul class="ul-m2">
   <li class="li-m2-3">Pétales de glacés et purée de noisettes</li>
